// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CodeExample> renders with a highlight that breaks in the middle of multiple lines 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <div
        class="insights-code"
      >
        Line 1
        <br />
        Line 2 
        <span
          class="highlight"
        >
          HIGHLIGHT
          <br />
          HERE
        </span>
        Line 3
        <br />
        Line 4
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with a highlight that spans multiple lines 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <div
        class="insights-code"
      >
        Line 1
        <br />
        <span
          class="highlight"
        >
          Line 2
          <br />
          Line 3
        </span>
        <br />
        Line 4
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with a line breaks and a highlighted line 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <div
        class="insights-code"
      >
        Line 1
        <br />
        <span
          class="highlight"
        >
          Line 2
        </span>
        <br />
        Line 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with a single line break 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <div
        class="insights-code"
      >
        Line 1
        <br />
        Line 2
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with empty highlighted region 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <div
        class="insights-code"
      >
        Empty 
        <span
          class="highlight"
        />
         highlight
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with many highlighted regions 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <div
        class="insights-code"
      >
        With 
        <span
          class="highlight"
        >
          quite
        </span>
         a 
        <span
          class="highlight"
        >
          number
        </span>
         of 
        <span
          class="highlight"
        >
          highlights
        </span>
        .
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with no highlighted region 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <div
        class="insights-code"
      >
        No highlight
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with no title 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <div
        class="insights-code"
      >
        code
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with one highlighted region 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <div
        class="insights-code"
      >
        One 
        <span
          class="highlight"
        >
          single
        </span>
         highlight
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with title 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-title"
    >
      <h4>
        title
      </h4>
    </div>
    <div
      class="code-example-code"
    >
      <div
        class="insights-code"
      >
        code
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeExample> renders with unterminated highlighted region 1`] = `
<DocumentFragment>
  <div
    class="code-example"
  >
    <div
      class="code-example-code"
    >
      <div
        class="insights-code"
      >
        One 
        <span
          class="highlight"
        >
          unterminated highlight
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
